     Thanks to Michael Banck

  * GOTO Masanori <gotom@debian.org>

   - debian/debhelper.in/libc.preinst: Fixed to work when kernel version is
     x.y.zFOOz pattern.  (Closes: #245643)
   - debian/patches/locale-ro_RO.dpatch: Fix Romania can't be built.
     (Closes: #245657)
   - debian/local/manpages/locale.1: Fix typo: LOC_PATH -> LOCPATH.
     (Closes: #246557)
   - debian/debhelper.in/libc-udeb.install: Add libnss_files.so*.
     (Closes: #247430)

 -- Jeff Bailey <jbailey@raspberryginger.com>  Sat, 24 Apr 2004 09:27:09 -0400

glibc (2.3.2.ds1-12) unstable; urgency=low

  * GOTO Masanori <gotom@debian.org>

   - debian/local/etc_init.d/mountkernfs: Fix typo.  (Closes: #229340)
   - debian/local/etc_init.d/mountkernfs: Fix error if the kernel does not
     set CONFIG_TMPFS on 2.4.  (Closes: #230758)
   - debian/local/etc_init.d/mountkernfs: Check each mount directory is
     actually directory or not.  (Closes: #234813)
   - debian/local/etc_init.d/mountkernfs: remove "set -e".
   - debian/debhelper.in/libc.postinst: use invoke-rc.d to invoke
     mountkernfs when it's available, suggested by Junichi Uekawa
     <dancer@netfort.gr.jp>.  (Closes: #230008)

   - debian/debhelper.in/libc.install: drop installing three files:
     debian/local/etc_init.d/mountkernfs, debian/local/etc_default/devpts,
     and debian/local/etc_default/tmpfs.  Because initscripts now provides
     those files.  (Closes: #238963)
   - debian/debhelper.in/libc.preinst: devpts.sh should be actually replaced to
     mountkernfs.  But by now mounting filesystems should be done with
     mountvirtfs in initscripts.  Initscripts needs to remove devpts.sh and
     mountkernfs.
   - debian/debhelper.in/libc.postinst: likewise.
   - debian/debhelper.in/libc.postrm: likewise.

   - debian/debhelper.in/libc.preinst: Fix kernel version detection correctly.
     Patched by Goswin von Brederlow <brederlo@informatik.uni-tuebingen.de>.
     (Closes: #241395).
