@@ -1,6 +1,8 @@
 control
 files
 libc*
+libnss-dns-udeb*
+libnss-files-udeb*
 glibc-doc*
 locales*
 tmp-*
