@@ -61,11 +61,12 @@ Architecture: @archs@
 Section: debian-installer
 Priority: extra
 Provides: @libc@, libc-udeb, ${locale:Depends}
+Depends: libnss-dns-udeb, libnss-files-udeb
 Description: GNU C Library: Shared libraries - udeb
  Contains the standard libraries that are used by nearly all programs on
  the system. This package includes shared versions of the standard C library
  and the standard math library, as well as many others.
  .
- This package contains a minimal set of libraries needed for the debian
+ This package contains a minimal set of libraries needed for the Debian
  installer.  Do not install it on a normal system.
 
