@@ -8,6 +8,6 @@ Description: GNU C Library: NSS helper for DNS
  the system. This package includes shared versions of the standard C library
  and the standard math library, as well as many others.
  .
- This package contains dns nss helper needed for the debian installer.  Do not
- install it on a normal system.
+ This package contains the DNS NSS helper needed for the Debian installer.
+ Do not install it on a normal system.
 
