@@ -4,8 +4,6 @@ debian/tmp-libc/lib/libm-*.so* lib
 debian/tmp-libc/lib/libm.so* lib
 debian/tmp-libc/lib/libdl*.so* lib
 debian/tmp-libc/lib/libresolv*.so* lib
-debian/tmp-libc/lib/libnss_dns*.so* lib
-debian/tmp-libc/lib/libnss_files.so* lib
 debian/tmp-libc/lib/libc-*.so* lib
 debian/tmp-libc/lib/libc.so* lib
 # FIXME: This should be with_threads arch's only.
