@@ -114,7 +114,7 @@ curpass = $(filter-out %_,$(subst _,_ ,$@))
 
 DEB_ARCH_REGULAR_PACKAGES = $(libc) $(libc)-dev $(libc)-dbg $(libc)-prof $(libc)-pic
 DEB_INDEP_REGULAR_PACKAGES = glibc-doc locales
-DEB_UDEB_PACKAGES = $(libc)-udeb libnss-dns-udeb
+DEB_UDEB_PACKAGES = $(libc)-udeb libnss-dns-udeb libnss-files-udeb
 
 # Generic kernel version check
 define kernel_check
