@@ -16,8 +16,17 @@ glibc (2.3.2.ds1-13) UNRELEASED; urgency=low
      (Closes: #245657)
    - debian/local/manpages/locale.1: Fix typo: LOC_PATH -> LOCPATH.
      (Closes: #246557)
-   - debian/debhelper.in/libc-udeb.install: Add libnss_files.so*.
+
+  * Colin Watson <cjwatson@debian.org>
+
+   - debian/rules: Add libnss-dns-udeb and libnss-files-udeb.
      (Closes: #247430)
+   - debian/.cvsignore: Likewise.
+   - debian/control.in/libc: libc-udeb depends on libnss-dns-udeb and
+     libnss-files-udeb.
+   - debian/debhelper.in/libc-udeb.install: Remove libnss_dns and libnss_files.
+   - debian/rules.d/control.mk: Likewise.
+   - debian/control.in/libnss-dns-udeb: Update description.
 
  -- Jeff Bailey <jbailey@raspberryginger.com>  Sat, 24 Apr 2004 09:27:09 -0400
 
